[package]
name = "driver-3461-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
rp2040-hal = { version = "0.10.0", features = ["rt", "critical-section-impl"] }