[package]
name = "driver-3461-rs"
version = "0.1.0"
edition = "2021"
authors = ["Shourya Eaga"]
readme = "./README.md"
repository = "https://github.com/shouryaeaga/driver-3461-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = {version = "0.2.5", features = ["unproven"]}