[package]
name = "driver-3461bs-rs"
description = "Driver for 3461BS LED driver"
version = "0.1.1"
edition = "2021"
authors = ["Shourya Eaga"]
readme = "./README.md"
repository = "https://github.com/shouryaeaga/driver-3461bs-rs"
license = "MIT"
keywords = ["embedded", "driver", "3461bs"]
categories = ["embedded", "hardware-support", "no-std", "drivers", "3461bs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = {version = "0.2.5", features = ["unproven"]}